-fix github browser alignment

--- a/css/githubBrowser/githubBrowser-donutChart.css
+++ b/css/githubBrowser/githubBrowser-donutChart.css
@@ -74,7 +74,7 @@
     div#chart {
         border: 1px solid black;
         width: 597px;
-        margin-left: 78px;
+        margin-left: 76px;
         height: 390px;
     }
 }
